try to fix overlapping labels

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -172,6 +172,7 @@ img[data-loaded="true"], [data-loaded="true"] img { animation-name: showLazyImg;
 }
 .noUi-tooltip {
   display: none;
+  z-index: 999
 }
 .noUi-active .noUi-tooltip {
   display: block;
